@@ -49,6 +49,7 @@ Copyright_License {
 #include "Device/Driver/FLARM.hpp"
 #include "Device/Driver/FlyNet.hpp"
 #include "Device/Driver/CProbe.hpp"
+#include "Device/Driver/LevilAHRS_G.hpp"
 #include "Util/Macros.hpp"
 
 /** NULL terminated array of available device drivers. */
@@ -80,6 +81,7 @@ static const struct DeviceRegister *const driver_list[] = {
   &flynet_driver,
   &gt_altimeter_device_driver,
   &c_probe_driver,
+  &levil_driver,
   NULL
 };
 
