@@ -12,6 +12,8 @@ Version 6.5 - not yet released
 * devices
   - LX: support flight download from LXNAV Nano (#2085)
   - Android/IOIO: support BMP085 sensor (DroidSoar V2)
+  - Android/IOIO: support MS5611 pressure sensor
+  - added driver for Levil AHRS device
 * user interface
   - preselect first item with details in map item list for
     faster access (#2069, #2207)
